// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageSerializer : getAllInterlocutors : should return array of users 1`] = `
{
  "data": [
    {
      "attributes": {
        "ava": null,
        "email": "111s@11.1",
        "firstName": "assaaa",
        "lastName": "bbsbb",
        "login": "dsdsd",
        "status": "1s",
      },
      "id": "3",
      "links": {
        "self": "http://localhost:5000/api/user/undefined",
      },
      "type": "User",
    },
    {
      "attributes": {
        "ava": null,
        "email": "111@11.1",
        "firstName": "aaaa",
        "lastName": "bbbb",
        "login": "Artem",
        "status": "1",
      },
      "id": "1",
      "links": {
        "self": "http://localhost:5000/api/user/undefined",
      },
      "type": "User",
    },
  ],
  "links": {
    "self": "http://localhost:5000/api/example",
  },
}
`;

exports[`MessageSerializer : getAllMessage : should return array with messages 1`] = `
{
  "data": [
    {
      "attributes": {
        "message": "Hello",
        "recipientId": undefined,
        "senderId": 1,
      },
      "id": "undefined",
      "included": {
        "attributes": {
          "ava": null,
          "email": "111@11.1",
          "firstName": "aaaa",
          "lastName": "bbbb",
          "login": "Artem",
          "status": "1",
        },
        "id": "undefined",
        "type": "User",
      },
      "links": {
        "self": "http://localhost:5000/api/dialog/message/undefined",
      },
      "relationships": {
        "user": {
          "data": {
            "id": "1",
            "type": "User",
          },
          "links": "http://localhost:5000/api/user/1",
        },
      },
      "type": "Message",
    },
    {
      "attributes": {
        "message": "Hel1lo",
        "recipientId": undefined,
        "senderId": 2,
      },
      "id": "undefined",
      "included": {
        "attributes": {
          "ava": null,
          "email": "111@161.1",
          "firstName": "a4aaa",
          "lastName": "bb5bb",
          "login": "Ar3tem",
          "status": "16",
        },
        "id": "undefined",
        "type": "User",
      },
      "links": {
        "self": "http://localhost:5000/api/dialog/message/undefined",
      },
      "relationships": {
        "user": {
          "data": {
            "id": "2",
            "type": "User",
          },
          "links": "http://localhost:5000/api/user/2",
        },
      },
      "type": "Message",
    },
  ],
  "links": {
    "self": "http://localhost:5000/api/example",
  },
}
`;

exports[`MessageSerializer : sendMessage : should return created message 1`] = `
{
  "data": {
    "attributes": {
      "message": "Hello",
      "recipientId": 2,
      "senderId": 1,
    },
    "id": "undefined",
    "links": {
      "self": "http://localhost:5000/api/dialog/message/undefined",
    },
    "type": "Message",
  },
}
`;
